--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+
+
 body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
@@ -24,13 +27,43 @@ h1
     font-family: 'Poppins', sans-serif;
 color: white;
 font-weight: 700;
-font-size:84.48px;
+font-size:64px;
 position: absolute;
-top: 273.24px;
-left: 205.92px;
+top: 207px;
+left: 156px;
 padding: 5px;
 
 }
+
+.WACH_LIVE{text-decoration: none;
+    background-color: rgb(208, 59, 5);
+
+}
+
+.led{
+    width: 168px;
+    height: 44px;
+    position: absolute;
+    top: 650px;
+    left: 156px;
+    background-color: rgb(208, 59, 5);
+    padding-left: 15px;
+    font-size: 16px;
+    font-weight: 600;
+}
+.WACH_LIVE:hover .led{
+    background-color: rgb(0, 255, 251);
+    width: 200px;
+    transition: 2.5s;
+
+
+
+
+ 
+    
+}
+
+
 .banner{
     display: flex;
     justify-content:space-between;
@@ -54,18 +87,18 @@ main{
 .players{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-column-gap: 39.6px;
-    margin-left: 237.6px;
-    margin-right: 237.6px;
+    grid-column-gap: 30px;
+    margin-left: 180px;
+    margin-right: 180px;
     
 
 }
 .player{
     
-    width: 436px;
-    height: 626px;
+    width: 330px;
+    height: 475px;
     box-shadow: 2px 1px 10px gray;
-    margin-bottom: 35.64px;
+    margin-bottom: 27px;
     overflow-y: hidden;
     
 }
@@ -74,8 +107,14 @@ main{
     justify-content: space-around;
 
 }
+
+.player-profile-img img{
+    width: 80%;
+    height: 80%;
+
+}
 .player-profile{
-    margin: 19.8px;
+    margin: 15px;
     
 
 }
@@ -83,7 +122,7 @@ main{
 
 .player-profile h3 {
     font-weight: 700px;
-    font-size: 36.96px;
+    font-size: 28px;
 
     
 
@@ -110,15 +149,15 @@ color: rgb(108, 108, 108);
 .tv-vedio{
     display: flex;
     align-items: center;
-    margin:179.52px;
+    margin:136px;
 }
 .coch img{
-    width: 748.44px;
-    height: 450px;
+    width: 567px;
+    height: 341px;
 }
 .video-text{
-    margin: 34.32px;
-    padding:26.4px;
+    margin: 26px;
+    padding:20px;
 
 }
 #video-text-heading{
@@ -127,7 +166,7 @@ color: rgb(108, 108, 108);
 
 }
 .coch{
-    margin:26.4px;
+    margin:20px;
 }
 
 
@@ -143,7 +182,7 @@ color: rgb(108, 108, 108);
 .news{
     display:grid;
     grid-template-columns: repeat(4,1fr);
-    grid-column-gap: 40px;
+    grid-column-gap: 30px;
     margin: 50px;
 }
 
@@ -170,6 +209,16 @@ color: rgb(108, 108, 108);
 /* <!-- newstodAY  finish          -->
 <!-- newstodAY  finish          --> */
 /* <!-- newstodAY  finish          --> */
+
+/* <!-- legendl start -->
+<!-- legendl start -->
+<!-- legendl start -->
+<!-- legendl start  -->
+ */
+
+
+
+
 
 
 
@@ -229,3 +278,43 @@ transition: 0s;
 footer{
     text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 400px) {
+    body { margin: 0;
+      background-color: rgb(255, 255, 255);
+    }
+      .players{
+        display: flex;
+    flex-direction: column;   
+    margin: 15px;
+    box-shadow: 2px 1px 10px gray;
+    
+    }
+    
+    
+    
+ 
+
+  }
+
+
+
+
+
+
+
+
+
+
+
