--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ left: 205.92px;
     position: absolute;
     top:612.48px;
     left:205.92px;
-    background-color: rgb(208, 59, 5);
+    background-color: rgb(0, 174, 255);
     padding-left: 15px;
     font-size: 16px;
     font-weight: 600;
@@ -282,20 +282,83 @@ transition: 5ss;
 }
 
 
+
+
+   /* legendpart-finish */
+   /* legendpart-finish */
+   /* legendpart-finish */
+   /* legendpart-finish */
+   /* legendpart-finish */
+   /* legendpart-finish */
+   /* legendpart-finish */
+
+
+
+
+/* article     finish */
+/* article     finish */
+/* article     finish*/
+/* article     finish*/
+/* article     finish*/
+/* article     finish*/
+/* article     finish*/
+
+  /* footersection */
+  /* footersection */
+  /* footersection */
+  /* footersection */
+  /* footersection */
+  /* footersection */
+  /* footersection */
+  /* footersection */
+
 }
 footer{
     text-align: center;
 }
+.footer-heading{
+    position: relative;
+    display: flex;
+justify-content: center;
+align-items: center;
+width: 483.87px;
+height: 110px;
+}
 
 
+.german-lover h3{font-family: 'Niconne', cursive;
+                font-size: 64px;
+                color: rgb(8, 41, 90);
+}
 
 
+.footer-img img{
+    width: 100%;
+   
+  
+}
 
+.footer-section{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.fontawsome h3 a{
+    margin: 15px;
+    color: rgb(179, 17, 17);
+    font-size: 32px;
 
+}
+footer{
+    margin-top: px;
+}
 
-
-
+/* footer section */
+/* footer section */
+/* footer section */
+/* footer section */
+/* footer section */
 
 
 @media only screen and (max-width: 400px) {
