--- a/mobile.css
+++ b/mobile.css
@@ -305,6 +305,9 @@ margin-bottom: 27px;
     .footer-section{
         margin-bottom: 15px;
     }
+    .fontawsome{
+        margin-top: 50px;
+    }
 
 
 
