--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header{
     background-repeat: no-repeat;
     
 }
-h1
+.banner-text h3
 {
     
     font-family: 'Poppins', sans-serif;
@@ -84,8 +84,10 @@ main{
 .players{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    grid-column-gap: 39.6px;
-    margin:237.6px;
+    /* .....30*1.32... */
+    grid-column-gap: 43.56px;
+    /* ........ */
+    margin: 233.6px;
     margin-top: 0;
   
     
@@ -113,7 +115,7 @@ main{
 }
 .player-profile{
     margin: 15px;
-    
+    margin-bottom: 33px;
 
 }
 
@@ -121,11 +123,17 @@ main{
 .player-profile h3 {
     font-weight: 700px;
     font-size: 28px;
-
+margin: 0;
     
 
 }
+
+
+
+
+
 .player-profile p{
+    margin: 0;
 font-size: 16px;
 
 color: rgb(108, 108, 108);
@@ -311,7 +319,7 @@ color: rgb(108, 108, 108);
     background-color: rgba(237, 15, 218, 0.179);
 
 
-transition: 5ss;
+transition: 5s;
 }
 
 
