--- a/mobile.css
+++ b/mobile.css
@@ -20,7 +20,7 @@
         background-image: url(banner-left-img/bgfinalimg.jpg);
         background-repeat: no-repeat;
     } */
-    h1
+    .banner-text h3
 {
     
     font-family: 'Poppins', sans-serif;
@@ -324,7 +324,7 @@ margin-bottom: 27px;
 
  
 }
-@media only screen and (max-width: 1600px) { 
+@media screen and (min-width: 1000px) and (max-width: 1500px)  { 
 
 
     body{
@@ -333,17 +333,7 @@ margin-bottom: 27px;
     .banner-text h3
 
 
-    .leaders{
-        grid-template-columns: repeat(5, 1fr);
-        grid-column-gap: 0px;
-   margin-top:20px;
-   margin-left: -15px;
-   
-   
-    }
-    .le-pic img{
-        width: 90%;
-    }
+  
 
 
     .banner-text h3
@@ -354,19 +344,19 @@ margin-bottom: 27px;
     font-weight: 700;
     font-size:64px;
     position: absolute;
-    top: 100px;
+    top: 207px;
     left: 156px;
     
     
     }
 
     .led{
-        top:464px;
-    left:156px;
+        top:650px;
+    left:196px;
     }
     .players{
     grid-column-gap: 33px;
-    margin: 177px;
+    
     margin-top: 0;}
 
 
@@ -395,6 +385,7 @@ margin-bottom: 27px;
             width: 80%;
         }
 
+    }
 
 
 
@@ -405,18 +396,3 @@ margin-bottom: 27px;
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-}
